Se deja listo para empezar a refactorizar

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-NASA_API_KEY=DEMO_KEY
+PERSONAL_KEY=lQMYF74NXxz5RNCFW3b31QoipXuzCINq86aP4gQN
+TEST_KEY=DEMO_KEY
+
+
+NASA_API_KEY=lQMYF74NXxz5RNCFW3b31QoipXuzCINq86aP4gQN
